js/js.translator/testData/incremental/invalidation/fakeOverrideClassFunctionQualifiers/lib1/l1.10.kt
open class Module2OpenClass {
}
